[tool.poetry]
name = "SS13-tools"
version = "0.1.0"
description = "Python toolchain for SS13"
authors = ["RigglePrime <27156122+RigglePrime@users.noreply.github.com>", "tattle <66640614+dragomagol@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "^2.28.1"
colorama = "^0.4.6"
tqdm = "^4.64.1"
python-dateutil = "^2.8.2"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
pylint = "^2.15.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
