[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pylint.'MASTER']
disable = [
    "missing-module-docstring"
]

[tool.pylint.'FORMAT']
max-line-length=127

[project]
authors = [
    {name = "RigglePrime", email = "27156122+RigglePrime@users.noreply.github.com"},
    {name = "tattle", email = "66640614+dragomagol@users.noreply.github.com"},
]
requires-python = "<3.13,<4.0.0,>=3.8.10"
dependencies = [
    "requests",
    "colorama",
    "tqdm",
    "python-dateutil",
    "aiohttp",
    "pycryptodome",
    "ipython",
    "pyperclip",
]
name = "SS13-tools"
version = "2.4.1"
description = "Python toolchain for SS13"
readme = "README.md"
keywords = [
    "ss13",
    "tgstation",
]

[project.urls]
repository = "https://github.com/RigglePrime/SS13-tools"

[project.scripts]
ss13tools = "ss13_tools.cli:run"
logbuddy = "ss13_tools.cli:log_buddy"
centcom = "ss13_tools.cli:centcom"

[dependency-groups]
dev = [
    "flake8",
    "pylint",
    "pyinstaller",
    "autopep8",
]
